--- a/wstrade.html
+++ b/wstrade.html
@@ -5,7 +5,6 @@
 <link href="//code.jquery.com/ui/1.10.3/themes/pepper-grinder/jquery-ui.min.css" rel="stylesheet">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.4/jquery.mousewheel.min.js"></script>
-<script src="/jquery/monthpicker/jquery.mtz.monthpicker.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/globalize.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/cultures/globalize.culture.ja-JP.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/cultures/globalize.culture.en-AU.js"></script>
@@ -16,7 +15,7 @@
 <script src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.js"></script>
 <script src="//cdn.datatables.net/plug-ins/725b2a2115b/integration/jqueryui/dataTables.jqueryui.js"></script>
 <style>body{font:62.5% "Trebuchet MS",sans-serif}div#xxheader{position:relative}div#header a img{height:120px}.left{float:left}.right{float:right}div#inhead{margin:0px 10px 0px 40px}div#inhead2{text-align:right}div.octal-notice{padding:0.2em 0.8em}div.octal-notice .ui-icon{margin-right:0.3em}div.octal-notice p{margin:.3em 0}.local-content{padding:8px}#themeswitcher-ctr{width:188px}</style>
-<script src="/octal.js"></script>
+<script src="/utility.js"></script>
 </head>
 <body>
 <div id="header" class="ui-widget ui-widget-header ui-helper-clearfix ui-corner-all local-content">
