--- a/wstrade.html
+++ b/wstrade.html
@@ -30,9 +30,9 @@
         </div>
 
         <div class="right" id="inhead2">
-            <div id="name">name</div>
-            <div id="account">acct</div>
-            <div id="currency">curr</div>
+            <div id="name"></div>
+            <div id="account"></div>
+            <div id="currency"></div>
         </div>
 
         <div class="ui-widget-content ui-corner-all" id="buthalf">
