--- a/wstrade.html
+++ b/wstrade.html
@@ -829,7 +829,7 @@ title="Supply a Binary.com API User Token (as found on the Settings page).  Stay
                     window.setTimeout(opensocket, g.degrade*1000);
                     return
                 }
-                notice("Service unavailable.  Please login at binary.com, then retry.", 'error');
+                notice("Service Unavailable. Please ensure you are logged-in at binary.com, then retry this page.", 'error');
                 /*
                 if (ev.code==1006) {
                     // this is the usual failure code, even for auth failure; message to be generic:
