fix refs to dev versions

--- a/wstrade.html
+++ b/wstrade.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>Multi-Contract Trading</title>
-    <!--link href="//code.jquery.com/ui/1.10.3/themes/pepper-grinder/jquery-ui.min.css" rel="stylesheet" id="ui-theme"-->
-    <link href="css/jquery-ui.custom.css" rel="stylesheet" id="ui-theme">
+    <link href="//code.jquery.com/ui/1.10.3/themes/pepper-grinder/jquery-ui.min.css" rel="stylesheet" id="ui-theme">
     <link href="//dbnet-public.s3.amazonaws.com/css/jquery.ui.themeswitcher.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.4/jquery.mousewheel.min.js"></script>
@@ -14,8 +13,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/cultures/globalize.culture.en-US.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/globalize/0.1.1/cultures/globalize.culture.de-DE.js"></script>
     <script src="//code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
-    <!--script src="//dbnet-public.s3.amazonaws.com/jquery.ui.themeswitcher.js"></script-->
-    <script src="/jquery.ui.themeswitcher.js"></script>
+    <script src="//dbnet-public.s3.amazonaws.com/jquery.ui.themeswitcher.js"></script>
 
     <link href="css/wstrade.css" rel="stylesheet">
     <script src="/utility.js"></script>
