--- a/wstrade.html
+++ b/wstrade.html
@@ -884,8 +884,8 @@
 
             function opensocket(opts) {
                 var handlers = {onclose:onclose,onmessage:onmessage,onopen:onopen};
-                //g.ws  = new WebSocket('wss://ws.binary.com/websockets/contracts');
-                g.ws  = new WebSocket('ws://www.devbin.io/websockets/contracts');
+                g.ws  = new WebSocket('wss://ws.binary.com/websockets/contracts');
+                //g.ws  = new WebSocket('ws://www.devbin.io/websockets/contracts');
                 $.extend(g.ws, handlers, opts);
             }
 
@@ -924,6 +924,7 @@
                     g.ws.onclose = function(){};
                     g.ws.close();
                 }
+                clear_notice('error');
                 notice('Token removed');
             }
 
