--- a/wstrade.html
+++ b/wstrade.html
@@ -884,8 +884,9 @@
 
             function opensocket(opts) {
                 var handlers = {onclose:onclose,onmessage:onmessage,onopen:onopen};
-                g.ws  = new WebSocket('wss://ws.binary.com/websockets/contracts');
-                //g.ws  = new WebSocket('ws://www.devbin.io/websockets/contracts');
+                console.log("window.location is %o", window.location);
+                //g.ws  = new WebSocket('wss://ws.binary.com/websockets/contracts');
+                g.ws  = new WebSocket('ws://www.devbin.io/websockets/contracts');
                 $.extend(g.ws, handlers, opts);
             }
 
