--- a/wstrade.html
+++ b/wstrade.html
@@ -884,9 +884,10 @@
 
             function opensocket(opts) {
                 var handlers = {onclose:onclose,onmessage:onmessage,onopen:onopen};
-                console.log("window.location is %o", window.location);
-                //g.ws  = new WebSocket('wss://ws.binary.com/websockets/contracts');
-                g.ws  = new WebSocket('ws://www.devbin.io/websockets/contracts');
+                var url = window.location.host == 'wstrade.binary.com'
+                            ? 'wss://ws.binary.com/websockets/contracts'
+                            : 'ws://www.devbin.io/websockets/contracts';
+                g.ws  = new WebSocket(url);
                 $.extend(g.ws, handlers, opts);
             }
 
